@@ -1,4 +1,5 @@
 4.0
+ * Introduce error metrics for repair (CASSANDRA-13387)
  * Refactoring to primitive functional interfaces in AuthCache (CASSANDRA-13732)
  * Update metrics to 3.1.5 (CASSANDRA-13648)
  * batch_size_warn_threshold_in_kb can now be set at runtime (CASSANDRA-13699)
